--- a/app/src/main/res/layout/help_browser_prelollipop.xml
+++ b/app/src/main/res/layout/help_browser_prelollipop.xml
@@ -154,4 +154,12 @@
             android:layout_weight="1"
             android:text="@string/help_browseclose" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/opensettings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|left"
+        android:padding="3dp"
+        android:text="@string/help_opensettings" />
 </LinearLayout>
