--- a/app/src/main/res/layout/browser.xml
+++ b/app/src/main/res/layout/browser.xml
@@ -25,8 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|left"
-                android:lines="1"
-                android:maxLines="1"
+                android:singleLine="true"
                 android:scrollbars="none"
                 android:textSize="18sp" />
         </HorizontalScrollView>
