--- a/app/src/main/res/layout/settings_global.xml
+++ b/app/src/main/res/layout/settings_global.xml
@@ -167,6 +167,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Directory"
+                            android:singleLine="true"
                             android:textSize="16dp" />
 
                     </HorizontalScrollView>
