--- a/app/src/main/res/layout/whats_new.xml
+++ b/app/src/main/res/layout/whats_new.xml
@@ -173,7 +173,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="top|left"
             android:layout_weight="1"
-            android:text="Support for additional file extensions: .config, .bat, .map, .conf, .opt, .rmp" />
+            android:text="Support for additional file extensions: .config, .bat, .map, .conf, .opt, .rmp, .nfo" />
     </LinearLayout>
 
     <LinearLayout
