--- a/app/src/main/res/layout/browser.xml
+++ b/app/src/main/res/layout/browser.xml
@@ -34,7 +34,7 @@
     
     <ListView android:id="@+id/android:list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent"/>
     <TextView android:id="@+id/android:empty"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
