--- a/app/src/main/res/layout/whats_new.xml
+++ b/app/src/main/res/layout/whats_new.xml
@@ -6,14 +6,14 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/v230"
+        android:id="@+id/v240"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|left"
         android:layout_marginBottom="6dp"
         android:layout_weight="1"
         android:padding="3dp"
-        android:text="Version 2.3.0:" />
+        android:text="Version 2.4.0:" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="top|left"
             android:layout_weight="1"
-            android:text="A new settings menu can be accessed by swiping to the right from the browser or text editor views. Settings local to individual text documents can be accessed by swiping to the right from the text editor view." />
+            android:text="TEdit is now compliant with Android 11 storage API security restrictions." />
     </LinearLayout>
 
     <LinearLayout
@@ -58,7 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="top|left"
             android:layout_weight="1"
-            android:text="Default startup directory can be set through the settings menu." />
+            android:text="For Android versions 4.3 and above TEdit can now only access directories explicitly permitted by the user. Root file browser view now displays the directories permitted by the user and allows the user to launch the Files application to select new directories to grant TEdit permission to access." />
     </LinearLayout>
 
     <LinearLayout
@@ -81,7 +81,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="top|left"
             android:layout_weight="1"
-            android:text="Additional fonts have been added and can be selected through the local and global settings menus." />
+            android:text="Threaded and animated directory switching in the file browser." />
     </LinearLayout>
 
     <LinearLayout
@@ -104,7 +104,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="top|left"
             android:layout_weight="1"
-            android:text="Word wrap can be toggled on or off through the local and global settings menus." />
+            android:text="A new option in the settings menu allows you to specify how TEdit handles Android's Back button/gesture when in the file browser. You can select for the Back action to initiate a move to the parent directory or to immediately close TEdit." />
     </LinearLayout>
 
     <LinearLayout
@@ -127,7 +127,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="top|left"
             android:layout_weight="1"
-            android:text="Text directionality/alignment can be selected through the local and global settings menus." />
+            android:text="Fixed file path displays in the file browser so they now properly autoscroll to the end of the path when switching directories." />
     </LinearLayout>
 
     <LinearLayout
@@ -150,7 +150,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="top|left"
             android:layout_weight="1"
-            android:text="TEdit now prompts to confirm closing a text document when attempting to close a file that has not been saved since last edited." />
+            android:text="Removed potentially confusing read only message when sending some files to TEdit from external applications." />
     </LinearLayout>
 
     <LinearLayout
@@ -173,281 +173,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="top|left"
             android:layout_weight="1"
-            android:text="Support for additional file extensions: .config, .bat, .map, .conf, .opt, .rmp, .nfo" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="3dp">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|left"
-            android:layout_marginRight="8dp"
-            android:layout_weight="0"
-            android:adjustViewBounds="true"
-            app:srcCompat="@drawable/bulletpoint" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|left"
-            android:layout_weight="1"
-            android:text="Various bug fixes." />
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/v221"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|left"
-        android:layout_marginBottom="6dp"
-        android:layout_marginTop="8dp"
-        android:layout_weight="1"
-        android:padding="3dp"
-        android:text="Version 2.2.1:" />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="3dp">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|left"
-            android:layout_marginRight="8dp"
-            android:layout_weight="0"
-            android:adjustViewBounds="true"
-            app:srcCompat="@drawable/bulletpoint" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|left"
-            android:layout_weight="1"
-            android:text="Fixed a crash for devices in which the 'external' storage medium is not mounted." />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="3dp">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|left"
-            android:layout_marginRight="8dp"
-            android:layout_weight="0"
-            android:adjustViewBounds="true"
-            app:srcCompat="@drawable/bulletpoint" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|left"
-            android:layout_weight="1"
-            android:text="Changed the save as hotkey from ctrl+alt+s to ctrl+shift+s." />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="3dp">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|left"
-            android:layout_marginRight="8dp"
-            android:layout_weight="0"
-            android:adjustViewBounds="true"
-            app:srcCompat="@drawable/bulletpoint" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|left"
-            android:layout_weight="1"
-            android:text="Updated the Editor help dialog to reflect save and save as hotkeys." />
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/v220"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|left"
-        android:layout_marginBottom="6dp"
-        android:layout_marginTop="8dp"
-        android:layout_weight="1"
-        android:padding="3dp"
-        android:text="Version 2.2.0:" />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="3dp">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|left"
-            android:layout_marginRight="8dp"
-            android:layout_weight="0"
-            android:adjustViewBounds="true"
-            app:srcCompat="@drawable/bulletpoint" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|left"
-            android:layout_weight="1"
-            android:text="Browse internal, root and SDcard volumes with the file browser." />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="3dp">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|left"
-            android:layout_marginRight="8dp"
-            android:layout_weight="0"
-            android:adjustViewBounds="true"
-            app:srcCompat="@drawable/bulletpoint" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|left"
-            android:layout_weight="1"
-            android:text="Search and replace text within your text documents." />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="3dp">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|left"
-            android:layout_marginRight="8dp"
-            android:layout_weight="0"
-            android:adjustViewBounds="true"
-            app:srcCompat="@drawable/bulletpoint" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|left"
-            android:layout_weight="1"
-            android:text="Locate and open files without extenions in the file browser." />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="3dp">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|left"
-            android:layout_marginRight="8dp"
-            android:layout_weight="0"
-            android:adjustViewBounds="true"
-            app:srcCompat="@drawable/bulletpoint" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|left"
-            android:layout_weight="1"
-            android:text="Hotkeys ctrl+s and ctrl+alt+s to save and save as respectively." />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="3dp">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|left"
-            android:layout_marginRight="8dp"
-            android:layout_weight="0"
-            android:adjustViewBounds="true"
-            app:srcCompat="@drawable/bulletpoint" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|left"
-            android:layout_weight="1"
-            android:text="Improved support for small screens." />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="3dp">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|left"
-            android:layout_marginRight="8dp"
-            android:layout_weight="0"
-            android:adjustViewBounds="true"
-            app:srcCompat="@drawable/bulletpoint" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|left"
-            android:layout_weight="1"
-            android:text="Improved button animations." />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="3dp">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|left"
-            android:layout_marginRight="8dp"
-            android:layout_weight="0"
-            android:adjustViewBounds="true"
-            app:srcCompat="@drawable/bulletpoint" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|left"
-            android:layout_weight="1"
-            android:text="New look, logo and icon." />
+            android:text="Fixed potential problem when overwriting files on SDCards on some devices." />
     </LinearLayout>
 </LinearLayout>
