--- a/app/src/main/res/layout/help_settings_global.xml
+++ b/app/src/main/res/layout/help_settings_global.xml
@@ -72,6 +72,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|left"
+        android:layout_marginTop="6dp"
+        android:text="@string/settings_actiononback"
+        android:textSize="18sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|left"
+        android:text="@string/help_settings_aob" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|left"
         android:layout_marginTop="18dp"
         android:text="@string/label_editor"
         android:textSize="24sp" />
