--- a/app/src/main/res/layout/whats_new.xml
+++ b/app/src/main/res/layout/whats_new.xml
@@ -6,6 +6,62 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/v243"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|left"
+        android:layout_marginBottom="6dp"
+        android:layout_weight="1"
+        android:padding="3dp"
+        android:text="Version 2.4.3:" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="3dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|left"
+            android:layout_marginRight="8dp"
+            android:layout_weight="0"
+            android:adjustViewBounds="true"
+            app:srcCompat="@drawable/bulletpoint" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|left"
+            android:layout_weight="1"
+            android:text="Fixed crash when tapping taskbar button before browser animation is finished when resuming application." />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="3dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|left"
+            android:layout_marginRight="8dp"
+            android:layout_weight="0"
+            android:adjustViewBounds="true"
+            app:srcCompat="@drawable/bulletpoint" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|left"
+            android:layout_weight="1"
+            android:text="Updated web address to https://www.inventati.org/1337gallery." />
+    </LinearLayout>
+
+    <TextView
         android:id="@+id/v242"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
