--- a/app/src/main/res/layout/whats_new.xml
+++ b/app/src/main/res/layout/whats_new.xml
@@ -67,6 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="top|left"
         android:layout_marginBottom="6dp"
+        android:layout_marginTop="6dp"
         android:layout_weight="1"
         android:padding="3dp"
         android:text="Version 2.4.2:" />
